[gd_scene load_steps=5 format=3 uid="uid://ccktqt6pgs2iu"]

[ext_resource type="Script" path="res://in_game_menu.gd" id="1_binjn"]
[ext_resource type="PackedScene" uid="uid://y2n3t04hbrp3" path="res://credits.tscn" id="2_l8t60"]
[ext_resource type="PackedScene" uid="uid://7klas3s0i4f5" path="res://settings.tscn" id="3_pfunq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0j6b"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.729412)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[node name="In-GameMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_binjn")

[node name="main" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="main"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h0j6b")

[node name="MarginContainer" type="MarginContainer" parent="main/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="main/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Water Tanks!"

[node name="PanelContainer" type="PanelContainer" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Continue" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Continue"
flat = true
alignment = 0
icon_alignment = 2

[node name="ButtonMainMenu" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Main Menu"
flat = true
alignment = 0
icon_alignment = 2

[node name="ButtonSettings" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Settings"
flat = true
alignment = 0
icon_alignment = 2

[node name="ButtonCredits" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 30
text = "Credits 
"
flat = true
alignment = 0
icon_alignment = 2

[node name="credits" parent="." instance=ExtResource("2_l8t60")]
visible = false
layout_mode = 2

[node name="settings" parent="." instance=ExtResource("3_pfunq")]
visible = false
layout_mode = 2

[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/ButtonMainMenu" to="." method="_load_main_menu"]
[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_toggle_settings"]
[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/ButtonCredits" to="." method="_on_toggle_credits"]
[connection signal="pressed" from="credits/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_toggle_credits"]
[connection signal="pressed" from="settings/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_toggle_settings"]

[editable path="credits"]
[editable path="settings"]
